--- a/mp.html
+++ b/mp.html
@@ -537,8 +537,13 @@
     </footer>
     <!-- footer End -->
   </div>
-  <a href="javascript:;" class="scrollToTop">SCROLL DOWN</a>
-  <!-- <button type="button" class="scrollToTop">回頁首</button> -->
+  <!-- scroll -->
+  <div id="l-anchor" class="l-anchor is-scroll">
+    <div class="l-anchor__body">
+      <p class="l-scroll"><a href="#top-product">SCROLL DOWN</a></p>
+      <p class="l-pagetop"><a href="#top">PAGE TOP</a></p>
+    </div>
+  </div>
   <!-- lazyload -->
   <script src="vendor/lazyload/lazyload.js"></script>
   <!-- picturefill -->
