--- a/mp.html
+++ b/mp.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HyUI kit</title>
+  <title>中華民國圍棋協會</title>
   <!-- WOW動畫-->
   <link href="css/animate.css" rel="stylesheet" />
   <!-- style css -->
@@ -30,7 +30,7 @@
       <div class="container">
         <a class="accessKey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
         <h1>
-          <a href="index.html"><img src="images/logo.png" alt="網站標題" /></a>
+          <a href="index.html"><img src="images/logo.png" alt="中華民國圍棋協會" /></a>
         </h1>
         <!-- noscript -->
         <noscript>
@@ -147,7 +147,7 @@
         </div>
       </section>
       <!-- 棋界動態 start-->
-      <section class="flex_12   newsUpdateBlock">
+      <section class="flex_12   newsUpdateBlock scrollDownFocus">
         <div class="container">
           <div class="newsUpdateGroup">
             <div class="sectitleBox wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.50s">棋界動態</div>
@@ -561,6 +561,11 @@
   <script src="js/main.js"></script>
   <!-- js -->
   <script src="js/customize.js"></script>
+  <!-- gsap setting -->
+  <script src="js/gsap.min.js"></script>
+  <script src="js/ScrollToPlugin.min.js"></script>
+  <script src="js/ScrollTrigger.min.js"></script>
+  <script src="js/gsapSetting.js"></script>
 </body>
 
 </html>
