--- a/mp.html
+++ b/mp.html
@@ -536,6 +536,23 @@
       </div>
     </footer>
     <!-- footer End -->
+    <!-- cookie start -->
+    <div class="cookieblock">
+      <div class="cookiebox">
+        <div class="cookiebox_text">
+          <div class="title">本網站的COOKIE和相關技術</div>
+          <p>為了提供您更多優質的內容，本網站使用cookies分析技術，若繼續閱覽本站內容，即表示您同意我們cookies，關於更多cookies請閱讀我們的<a href="#">隱私權策略</a>。</p>
+          <button class="cookiebox_btn btn">同意</button>
+        </div>
+        <div class="cookieblock_close">
+          <button class="cookieblock_close-btn"></button>
+        </div>
+      </div>
+      <div class="cookieblock_bg"></div>
+    </div>
+
+    <!-- cookie End -->
+
   </div>
   <!-- scroll -->
   <div id="l-anchor" class="l-anchor is-scroll">
@@ -544,6 +561,7 @@
       <p class="l-pagetop"><a href="#top">PAGE TOP</a></p>
     </div>
   </div>
+
   <!-- lazyload -->
   <script src="vendor/lazyload/lazyload.js"></script>
   <!-- picturefill -->
