--- a/mp.html
+++ b/mp.html
@@ -537,8 +537,8 @@
     </footer>
     <!-- footer End -->
     <!-- cookie start -->
-    <div class="cookieblock">
-      <div class="cookiebox">
+    <div class="cookieblock wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
+      <div class="cookiebox wow fadeInUpBig" data-wow-duration="1s" data-wow-delay="0s">
         <div class="cookiebox_text">
           <div class="title">本網站的COOKIE和相關技術</div>
           <p>為了提供您更多優質的內容，本網站使用cookies分析技術，若繼續閱覽本站內容，即表示您同意我們cookies，關於更多cookies請閱讀我們的<a href="#">隱私權策略</a>。</p>
